[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coords2sigma"
version = "1.0"
authors = [
  { name="Thomas Rometsch", email="thomas.rometsch@gmail.com" }
]
dependencies = [
   "numpy"
 ]
description = "Convert a 2D particle distribution to a surface density field on a grid."
readme = "README.md"
license = {text = "BSD 3-Clause License"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]